2005-08-04 Borut Razem <borut.razem AT siol.net>

	* configure.in: pic16 libraries build 2nd try - enable running
	  configure in device/lib/pic16
	* configure: regenerated from configure.in
	* device/lib/Makefile.in: create $(PORT)/bin directory

2005-08-03 Raphael Neider <rneider AT web.de>

	* src/pic16/gen.c (pic16_derefPtr): NEW, single place
	  to get/set values via pointers
	* (genUnpackBits,genPackBits): changed detection of
	  ptr->bitfield vs. sym.bitfield, fixed access via generic
	  pointers, removed dead (wrong) code for multibyte bitfields
	* (genNearPointerGet, genGenPointerGet): removed useless code,
	  fixed bitfield detection, fixes #1250594
	* (genNearPointerSet): removed useless code
	* src/pic16/gen.h: renamed pic16_emitpcode to pic16_emitpcode_real
	  and introduced macro pic16_emitpcode that conditionally emits
	  the origin of the following pCode (useful for debugging SDCC)
	* src/pic16/pcode.c: changed (and disabled) some debug outputs
	* (createDefmap): fixed handling of LFSR for --optimize-df

2005-08-02 Borut Razem <borut.razem AT siol.net>

	* device/lib/Makefile.in: pic16 libraries build enabled since
	  gputils-0.13.2 are now localy installed at sourceforge's compile farm

2005-08-02 Raphael Neider <rneider AT web.de>

	* src/pic16/gen.c (genPackBits): removed deprecated warning
	* (genGenPointerSet): fixed bitfield detection

2005-08-02 Jesus Calvino-Fraga <jesusc AT ece.ubc.ca>

	* device/include/mcs51/msm8xc154s.h: Removed PT2 definition, now in 8052.h.

2005-07-31 Raphael Neider <rneider AT web.de>

	* device/lib/pic16/libdev/pic18f458.c,
	  device/include/pic16/pic18f458.h: added missing T0CONbits

2005-07-29 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/mcs51/msm8xc154s.h: added, thanks to Matthias Arndt

2005-07-28 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (operandsEqu): fixed bug 1246687

2005-07-23 Jesus Calvino-Fraga <jesusc AT ece.ubc.ca>

	* device/include/mcs51/at89c51ed2.h: added.
